<resources>
    <string name="app_name">TravelEase</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="default_location">Fetching Location</string>
    <string name="default_temp">NA</string>
    <string name="change_city_description">Click Here to Change City</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="default_query">Enter city name</string>
    <string name="explore_nearby">Explore Nearby</string>
    <string name="choose_category">Choose Category</string>
    <string name="amusement_parks">Amusement Parks</string>
    <string name="malls">Malls</string>
    <string name="local_attractions">Local Attractions</string>
    <string name="stations">Stations</string>
    <string name="search">Search</string>
    <string name="restaurants">Restaurants</string>
</resources>
